kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudpay-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cloudpay.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
          - path: /transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 4000
